--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -69,3 +69,53 @@
 .more-cards {
     padding-left: 6%;
 }
+
+@media (max-width: 1024px) {
+    .tears-caption .title-cards {
+        display: none;
+    }
+
+    .tears-btns {
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 800px) {
+    .tears-caption {
+        padding-left: 4%;
+    }
+
+    .caption-img {
+        margin-bottom: 10px;
+        width: 40%;
+    }
+
+    .tears-caption p {
+        font-size: 12px;
+        margin-bottom: 10px;
+    }
+
+    .btn img {
+        width: 20px;
+    }
+
+    .more-cards {
+        padding-left: 4%;
+    }
+}
+
+@media (max-width: 500px) {
+    .caption-img {
+        display: none;
+    }
+
+    .tears-btns .btn img {
+        width: 15px;
+    }
+
+    .tears-btns .btn {
+        padding: 4px 10px;
+        gap: 5px;
+        font-size: 10px;
+    }
+}
