--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -86,3 +86,26 @@
     font-weight: 500;
     cursor: pointer;
 }
+
+.login-spinner {
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.login-spinner img {
+    width: 60px;
+}
+
+@media (max-width: 500px) {
+    .login {
+        padding: 15px 5%;
+    }
+
+    .login-form {
+        padding: 20px;
+        margin-top: 30px;
+    }
+}
